Add accept and reject button
 #Add proptypes validatiomn

 #Add proptypes validatiomn

 #Add proptypes validation

--- a/lang/es.json
+++ b/lang/es.json
@@ -966,7 +966,9 @@
   "host.link": "Usa este host",
   "host.paymentMethod.manual.instructions": "Instructions to make the payment of {amount} will be sent to your email address {email}. Your order will be pending until the funds have been received by the host ({host}).",
   "host.paymentMethod.manual.limitWarning": "{host} can't receive Bank Transfers right now via Open Collective because they've reached their free plan limit. Once they upgrade to a paid plan, Bank Transfers will be available again.",
+  "host.pending-applications.approve": "Approve",
   "host.pending-applications.noPending": "Sin colectivos en espera de aprobación",
+  "host.pending-applications.reject": "Reject",
   "Host.Plan": "Host Plan",
   "Host.Plan.acrossCollectives": "across all collectives",
   "Host.Plan.AddedFunds.limited": "Up to $1000 added funds",
