--- a/lang/pt.json
+++ b/lang/pt.json
@@ -965,8 +965,10 @@
   "host.hostLimit.warning": "O Organizador já atingiu o limite de coletivos hospedados para seu plano. <a>Contate {collectiveName}</a> e deixe-os saber que você quer se inscrever.",
   "host.link": "Use este organizador",
   "host.paymentMethod.manual.instructions": "As instruções para efetuar o pagamento de {amount} serão enviadas para o seu endereço de e-mail {email}. Seu pedido ficará pendente até que os fundos sejam recebidos pelo host ({host}).",
-  "host.paymentMethod.manual.limitWarning": "{host} não podem receber Transferências Bancárias agora mesmo via Open Collective porque atingiram o limite do seu plano livre. Uma vez que eles atualizem para um plano pago, as Transferências Bancárias estarão disponíveis novamente.",
+  "host.paymentMethod.manual.limitWarning": "{host} can't receive Bank Transfers right now via Open Collective because they've reached their free plan limit. Once they upgrade to a paid plan, Bank Transfers will be available again.",
+  "host.pending-applications.approve": "Approve",
   "host.pending-applications.noPending": "Nenhum coletivo aguardando aprovação",
+  "host.pending-applications.reject": "Reject",
   "Host.Plan": "Plano de Organização",
   "Host.Plan.acrossCollectives": "em todos os Coletivos",
   "Host.Plan.AddedFunds.limited": "Até $1000 de fundos adicionados",
