--- a/lang/fr.json
+++ b/lang/fr.json
@@ -965,8 +965,10 @@
   "host.hostLimit.warning": "L'hôte a déjà atteint la limite de collectifs hébergés pour son forfait. <a>Contactez {collectiveName}</a> et faites-leur savoir que vous souhaitez postuler.",
   "host.link": "Sélectionner cet hôte",
   "host.paymentMethod.manual.instructions": "Les instructions pour faire le paiement de {amount} seront envoyées à votre adresse {email}. Votre commande sera mise en attente jusqu'à ce que les fonds aient été reçus par l'hôte ({host}).",
-  "host.paymentMethod.manual.limitWarning": "{host} ne peut pas recevoir de virements bancaires via Open Collective car il a atteint la limite du forfait gratuit. Une fois passé sur une offre payante, les virements bancaires seront à nouveau disponibles.",
+  "host.paymentMethod.manual.limitWarning": "{host} can't receive Bank Transfers right now via Open Collective because they've reached their free plan limit. Once they upgrade to a paid plan, Bank Transfers will be available again.",
+  "host.pending-applications.approve": "Approve",
   "host.pending-applications.noPending": "Aucun collectif n'est en attente d'approbation",
+  "host.pending-applications.reject": "Reject",
   "Host.Plan": "Forfait d'hôte",
   "Host.Plan.acrossCollectives": "across all collectives",
   "Host.Plan.AddedFunds.limited": "Jusqu'à 1000$ de fonds ajoutés",
