chore: internationalize minimum amount

--- a/lang/es.json
+++ b/lang/es.json
@@ -331,6 +331,7 @@
   "Contact.Message": "Mensaje",
   "Contact.Subject": "Tema",
   "ContactCollective": "Contactar {collective}",
+  "contribuion.minimumAmount": "Minimum amount: {minAmount} {currency}",
   "Contribute": "Contribuir",
   "contribute.changeFrequency.confirmMsg": "If you're changing the frequency, you will not contribute to this specific tier \"{tierName}\"",
   "contribute.changeTaxNumber": "Cambiar {taxName} numero",
