chore: langs:update for renderNone

--- a/lang/es.json
+++ b/lang/es.json
@@ -1240,6 +1240,7 @@
   "redeemed.success": "Gift Card Redeemed!",
   "redeemed.suggestions": "o puedes elegir de estos increíbles colectivos que están haciendo un genial trabajo:",
   "Remove": "Remove",
+  "renderNone": "None",
   "Reset": "Reset",
   "response.status.interested": "{name} se interesa",
   "response.status.yes": "{name} atenderá",
