--- a/lang/ja.json
+++ b/lang/ja.json
@@ -1240,6 +1240,7 @@
   "redeemed.success": "Gift Card Redeemed!",
   "redeemed.suggestions": "または、素晴らしい仕事をしているこれらの素晴らしいコレクティブから選べます。",
   "Remove": "Remove",
+  "renderNone": "None",
   "Reset": "Reset",
   "response.status.interested": "{name} が興味あると言っています",
   "response.status.yes": "{name} が参加予定です",
