--- a/lang/pt.json
+++ b/lang/pt.json
@@ -1240,6 +1240,7 @@
   "redeemed.success": "Vale-presente resgatado!",
   "redeemed.suggestions": "ou você pode escolher entre esses incríveis coletivos que estão fazendo um ótimo trabalho:",
   "Remove": "Remover",
+  "renderNone": "None",
   "Reset": "Resetar",
   "response.status.interested": "{name} está interessado",
   "response.status.yes": "{name} está indo",
