--- a/lang/en.json
+++ b/lang/en.json
@@ -1240,6 +1240,7 @@
   "redeemed.success": "Gift Card Redeemed!",
   "redeemed.suggestions": "or you can choose from these awesome collectives that are doing great work:",
   "Remove": "Remove",
+  "renderNone": "None",
   "Reset": "Reset",
   "response.status.interested": "{name} is interested",
   "response.status.yes": "{name} is going",
